@@ -1,9 +1,9 @@
 AC_PREREQ([2.60])
-AC_INIT([globus_common], [16.9], [https://github.com/globus/globus-toolkit/issues])
+AC_INIT([globus_common], [17.0], [https://github.com/globus/globus-toolkit/issues])
 AC_CONFIG_MACRO_DIR([m4])
 AC_SUBST([MAJOR_VERSION], [${PACKAGE_VERSION%%.*}])
 AC_SUBST([MINOR_VERSION], [${PACKAGE_VERSION##*.}])
-AC_SUBST([AGE_VERSION], [16])
+AC_SUBST([AGE_VERSION], [17])
 AC_SUBST([PACKAGE_DEPS], [""])
 
 AC_CONFIG_AUX_DIR([build-aux])
