@@ -22,6 +22,7 @@ check_PROGRAMS = \
     globus_args_scan_test \
     globus_error_construct_string_test \
     globus_eval_path_test \
+    globus_error_errno_test \
     globus_libc_setenv_test \
     globus_location_test \
     globus_url_test \
